--- a/FrontEnd/vox_chain-xero-01/package.json
+++ b/FrontEnd/vox_chain-xero-01/package.json
@@ -12,7 +12,10 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "thirdweb": "^5.92.1"
   },
   "devDependencies": {
