--- a/FrontEnd/vox_chain-xero-01/package.json
+++ b/FrontEnd/vox_chain-xero-01/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
-    "thirdweb": "^5.92.1"
+    "thirdweb": "^5.92.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
