--- a/FrontEnd/vox_chain-xero-01/package.json
+++ b/FrontEnd/vox_chain-xero-01/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
@@ -16,8 +20,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
+    "tailwind-merge": "^3.2.0",
     "thirdweb": "^5.92.1",
-    "zustand": "^5.0.3"
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
